# crypto-cxx

./: CMakeLists.txt  README.adoc
integer/: CMakeLists.txt
integer/src/main/ixx/: integer.ixx
integer/src/test/cxx/: integer.cxx  integer_2n.cxx  integer_2n_add.cxx  integer_2n_difference.cxx  integer_2n_is_equal.cxx  integer_2n_is_less.cxx  integer_2n_is_zero.cxx  integer_2n_multiply.cxx  integer_2n_product.cxx  integer_2n_remain.cxx  integer_2n_subtract.cxx  integer_2n_sum.cxx
integer/src/test/ixx/: test.ixx
